--- a/src/Essentials/samples/Samples/Platforms/Android/AndroidManifest.xml
+++ b/src/Essentials/samples/Samples/Platforms/Android/AndroidManifest.xml
@@ -11,6 +11,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 	<queries>
 		<!-- Email -->
 		<intent>
