--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -81,7 +81,7 @@
 
   <!-- Until we get a new enough dotnet -->
   <ItemGroup Condition="'$(_MauiTargetPlatformIsWindows)' == 'True'">
-    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.35-preview" TargetingPackVersion="10.0.19041.35-preview" />
+    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.41" TargetingPackVersion="10.0.19041.41" />
   </ItemGroup>
 
   <!--
