Move to internal net9 rc1
Update variables.yml

Update extensions and aspnet

Update provision.yml

Update handlers.yml

Use non base64

Setup internal sources

Try new setup feeds job

Update provision.yml

--- a/eng/pipelines/common/variables.yml
+++ b/eng/pipelines/common/variables.yml
@@ -59,10 +59,10 @@ variables:
   value: false
 - group: Xamarin-Secrets
 # Variable groups required for private builds
-# - ${{ if or(eq(variables['System.TeamProject'], 'DevDiv'), eq(variables['Build.DefinitionName'], 'dotnet-maui')) }}:
-#   - name: PrivateBuild
-#     value: true
-#   # For eng/common/SetupNugetSources.ps1
-#   - group: DotNetBuilds storage account read tokens
-#   - group: AzureDevOps-Artifact-Feeds-Pats
+- ${{ if or(eq(variables['System.TeamProject'], 'DevDiv'), eq(variables['Build.DefinitionName'], 'dotnet-maui')) }}:
+  - name: PrivateBuild
+    value: true
+  # For eng/common/SetupNugetSources.ps1
+  - group: DotNetBuilds storage account read tokens
+  - group: AzureDevOps-Artifact-Feeds-Pats
 
