--- a/NuGet.config
+++ b/NuGet.config
@@ -26,6 +26,8 @@
     <!-- Added manually for dotnet/runtime 8.0.8 -->
     <add key="darc-pub-dotnet-emsdk-e92f92e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-e92f92ef/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-runtime-2d5c0b7" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-2d5c0b72/nuget/v3/index.json" />
+    <!-- Added manually for .NET 8 Android -->
+    <add key="darc-pub-dotnet-android-b0fd011" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-b0fd0113/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
