--- a/NuGet.config
+++ b/NuGet.config
@@ -28,6 +28,8 @@
     <add key="darc-pub-dotnet-runtime-2d5c0b7" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-2d5c0b72/nuget/v3/index.json" />
     <!-- Added manually for .NET 8 Android -->
     <add key="darc-pub-dotnet-android-b0fd011" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-b0fd0113/nuget/v3/index.json" />
+    <!-- Added manually for .NET 8 macios -->
+    <add key="darc-pub-xamarin-xamarin-macios-bc01f5e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-bc01f5e0/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
