--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -140,156 +140,156 @@ resources:
 
 stages:
 
-  - stage: build_net
-    displayName: Build .NET MAUI
-    dependsOn: []
-    jobs:
-      - ${{ each BuildPlatform in parameters.BuildPlatforms }}:
-        - ${{ each BuildConfiguration in parameters.BuildConfigurations }}:
-          - job: build_net_${{ BuildPlatform.name }}_${{ BuildConfiguration }}
-            workspace:
-              clean: all
-            displayName: ${{ BuildPlatform.name }} (${{ BuildConfiguration }})
-            timeoutInMinutes: 240
-            condition: or(
-              ${{ parameters.BuildEverything }},
-              ne(variables['Build.Reason'], 'PullRequest'),
-              eq('${{ BuildConfiguration }}', 'Release'))
-            pool:
-              name: ${{ BuildPlatform.poolName }}
-              vmImage: ${{ BuildPlatform.vmImage }}
-              demands:
-                - macOS.Name -equals Sonoma
-                - macOS.Architecture -equals x64
-            steps:
-              - template: common/provision.yml
-                parameters:
-                  poolName: ${{ BuildPlatform.poolName }}
-                  gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-              - pwsh: ./build.ps1 --target=dotnet --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
-                displayName: 'Install .NET'
-                retryCountOnTaskFailure: 3
-                env:
-                  DOTNET_TOKEN: $(dotnetbuilds-internal-container-read-token)
-                  PRIVATE_BUILD: $(PrivateBuild)
-              - pwsh: ./build.ps1 --target=dotnet-build --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
-                displayName: 'Build .NET Maui'
-              - pwsh: ./build.ps1 --target=dotnet-test --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
-                displayName: 'Run Unit Tests'
-              - task: PublishTestResults@2
-                condition: always()
-                inputs:
-                  testRunner: VSTest
-                  testResultsFiles: '$(build.artifactstagingdirectory)/**/*.trx'
-              - task: PublishBuildArtifacts@1
-                condition: always()
-                displayName: Publish Artifacts (${{ BuildPlatform.artifact }})
-                inputs:
-                  ArtifactName: ${{ BuildPlatform.artifact }}
+  # - stage: build_net
+  #   displayName: Build .NET MAUI
+  #   dependsOn: []
+  #   jobs:
+  #     - ${{ each BuildPlatform in parameters.BuildPlatforms }}:
+  #       - ${{ each BuildConfiguration in parameters.BuildConfigurations }}:
+  #         - job: build_net_${{ BuildPlatform.name }}_${{ BuildConfiguration }}
+  #           workspace:
+  #             clean: all
+  #           displayName: ${{ BuildPlatform.name }} (${{ BuildConfiguration }})
+  #           timeoutInMinutes: 240
+  #           condition: or(
+  #             ${{ parameters.BuildEverything }},
+  #             ne(variables['Build.Reason'], 'PullRequest'),
+  #             eq('${{ BuildConfiguration }}', 'Release'))
+  #           pool:
+  #             name: ${{ BuildPlatform.poolName }}
+  #             vmImage: ${{ BuildPlatform.vmImage }}
+  #             demands:
+  #               - macOS.Name -equals Sonoma
+  #               - macOS.Architecture -equals x64
+  #           steps:
+  #             - template: common/provision.yml
+  #               parameters:
+  #                 poolName: ${{ BuildPlatform.poolName }}
+  #                 gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
+  #             - pwsh: ./build.ps1 --target=dotnet --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
+  #               displayName: 'Install .NET'
+  #               retryCountOnTaskFailure: 3
+  #               env:
+  #                 DOTNET_TOKEN: $(dotnetbuilds-internal-container-read-token)
+  #                 PRIVATE_BUILD: $(PrivateBuild)
+  #             - pwsh: ./build.ps1 --target=dotnet-build --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
+  #               displayName: 'Build .NET Maui'
+  #             - pwsh: ./build.ps1 --target=dotnet-test --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
+  #               displayName: 'Run Unit Tests'
+  #             - task: PublishTestResults@2
+  #               condition: always()
+  #               inputs:
+  #                 testRunner: VSTest
+  #                 testResultsFiles: '$(build.artifactstagingdirectory)/**/*.trx'
+  #             - task: PublishBuildArtifacts@1
+  #               condition: always()
+  #               displayName: Publish Artifacts (${{ BuildPlatform.artifact }})
+  #               inputs:
+  #                 ArtifactName: ${{ BuildPlatform.artifact }}
 
-  - stage: pack_net
-    displayName: Pack .NET MAUI
-    dependsOn: []
-    jobs:
-      - ${{ each PackPlatform in parameters.PackPlatforms }}:
-        - job: pack_net_${{ PackPlatform.name }}
-          workspace:
-            clean: all
-          displayName: ${{ PackPlatform.name }}
-          timeoutInMinutes: 240
-          pool:
-            name: ${{ PackPlatform.poolName }}
-            vmImage: ${{ PackPlatform.vmImage }}
-            demands:
-              - macOS.Name -equals Sonoma
-              - macOS.Architecture -equals x64
-          variables:
-            - name: _buildScript
-              value: $(Build.SourcesDirectory)/build.cmd -ci
-            - name: _BuildConfig
-              value: Release
-            - name: _BuildOfficalId
-              value: $[ format('{0}.{1}', format('{0:yyyyMMdd}', pipeline.startTime), counter(format('{0:yyyyMMdd}', pipeline.startTime), 1) )]
+  # - stage: pack_net
+  #   displayName: Pack .NET MAUI
+  #   dependsOn: []
+  #   jobs:
+  #     - ${{ each PackPlatform in parameters.PackPlatforms }}:
+  #       - job: pack_net_${{ PackPlatform.name }}
+  #         workspace:
+  #           clean: all
+  #         displayName: ${{ PackPlatform.name }}
+  #         timeoutInMinutes: 240
+  #         pool:
+  #           name: ${{ PackPlatform.poolName }}
+  #           vmImage: ${{ PackPlatform.vmImage }}
+  #           demands:
+  #             - macOS.Name -equals Sonoma
+  #             - macOS.Architecture -equals x64
+  #         variables:
+  #           - name: _buildScript
+  #             value: $(Build.SourcesDirectory)/build.cmd -ci
+  #           - name: _BuildConfig
+  #             value: Release
+  #           - name: _BuildOfficalId
+  #             value: $[ format('{0}.{1}', format('{0:yyyyMMdd}', pipeline.startTime), counter(format('{0:yyyyMMdd}', pipeline.startTime), 1) )]
 
-          steps:
-            - template: common/pack.yml
-              parameters:
-                platform: ${{ PackPlatform.name }}
-                provisionatorChannel: ${{ parameters.provisionatorChannel }}
-                artifact:  ${{ PackPlatform.artifact }}
-                artifactsPath: $(Build.ArtifactStagingDirectory)
-                artifactBinaries: 'pack-binaries'
-                buildConfiguration: $(_BuildConfig)
-                dotnetScript: $(Build.SourcesDirectory)/dotnet.cmd
-                buildScript: $(_buildScript)
-                repoArtifactsPath: $(Build.Arcade.ArtifactsPath)
-                repoLogPath: $(Build.Arcade.LogsPath)
-                repoTestResultsPath: $(Build.Arcade.TestResultsPath)
-                gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-                officialBuildId: $(_BuildOfficalId)
-                prepareSteps:
-                  - template: common/provision.yml
-                    parameters:
-                      checkoutDirectory: '$(System.DefaultWorkingDirectory)'
-                      provisionatorChannel: ${{ parameters.provisionatorChannel }}
-                      gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
-                      skipAndroidImages: true
+  #         steps:
+  #           - template: common/pack.yml
+  #             parameters:
+  #               platform: ${{ PackPlatform.name }}
+  #               provisionatorChannel: ${{ parameters.provisionatorChannel }}
+  #               artifact:  ${{ PackPlatform.artifact }}
+  #               artifactsPath: $(Build.ArtifactStagingDirectory)
+  #               artifactBinaries: 'pack-binaries'
+  #               buildConfiguration: $(_BuildConfig)
+  #               dotnetScript: $(Build.SourcesDirectory)/dotnet.cmd
+  #               buildScript: $(_buildScript)
+  #               repoArtifactsPath: $(Build.Arcade.ArtifactsPath)
+  #               repoLogPath: $(Build.Arcade.LogsPath)
+  #               repoTestResultsPath: $(Build.Arcade.TestResultsPath)
+  #               gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
+  #               officialBuildId: $(_BuildOfficalId)
+  #               prepareSteps:
+  #                 - template: common/provision.yml
+  #                   parameters:
+  #                     checkoutDirectory: '$(System.DefaultWorkingDirectory)'
+  #                     provisionatorChannel: ${{ parameters.provisionatorChannel }}
+  #                     gitHubToken: $(github--pat--vs-mobiletools-engineering-service2)
+  #                     skipAndroidImages: true
 
-  - stage: samples_net
-    displayName: Test .NET MAUI Samples
-    dependsOn: pack_net
-    jobs:
-      - ${{ each BuildPlatform in parameters.BuildPlatforms }}:
-        - job: build_net_${{ BuildPlatform.name }}_samples
-          workspace:
-            clean: all
-          displayName: ${{ BuildPlatform.name }}
-          timeoutInMinutes: 120
-          pool:
-            name: ${{ BuildPlatform.poolName }}
-            vmImage: ${{ BuildPlatform.vmImage }}
-            demands:
-              - macOS.Name -equals Sonoma
-              - macOS.Architecture -equals x64
-          steps:
-            - template: common/provision.yml
-              parameters:
-                poolName: ${{ BuildPlatform.poolName }}
+  # - stage: samples_net
+  #   displayName: Test .NET MAUI Samples
+  #   dependsOn: pack_net
+  #   jobs:
+  #     - ${{ each BuildPlatform in parameters.BuildPlatforms }}:
+  #       - job: build_net_${{ BuildPlatform.name }}_samples
+  #         workspace:
+  #           clean: all
+  #         displayName: ${{ BuildPlatform.name }}
+  #         timeoutInMinutes: 120
+  #         pool:
+  #           name: ${{ BuildPlatform.poolName }}
+  #           vmImage: ${{ BuildPlatform.vmImage }}
+  #           demands:
+  #             - macOS.Name -equals Sonoma
+  #             - macOS.Architecture -equals x64
+  #         steps:
+  #           - template: common/provision.yml
+  #             parameters:
+  #               poolName: ${{ BuildPlatform.poolName }}
 
-            - task: DownloadBuildArtifacts@0
-              displayName: 'Download Packages'
-              inputs:
-                artifactName: nuget
-                itemPattern: '**/*.nupkg'
-                downloadPath: $(System.DefaultWorkingDirectory)/artifacts
-            - pwsh: Move-Item -Path artifacts\nuget\*.nupkg -Destination artifacts -Force
-              displayName: Move the downloaded artifacts
-            - pwsh: ./build.ps1 --target=dotnet-local-workloads --verbosity=diagnostic
-              displayName: 'Install .NET (Local Workloads)'
-              retryCountOnTaskFailure: 3
-              env:
-                DOTNET_TOKEN: $(dotnetbuilds-internal-container-read-token)
-                PRIVATE_BUILD: $(PrivateBuild)
-            - pwsh: ./build.ps1 --target=dotnet-integration-build --verbosity=diagnostic
-              displayName: Build Microsoft.Maui.IntegrationTests
-            - pwsh: ./build.ps1 --target=dotnet-integration-test --filter="FullyQualifiedName=Microsoft.Maui.IntegrationTests.SampleTests" --resultsfilename="integration-samples" --verbosity=diagnostic
-              displayName: Run ${{ BuildPlatform.name }} sample build tests
-            - task: PublishTestResults@2
-              displayName: Publish the ${{ BuildPlatform.name }} sample build tests
-              condition: always()
-              inputs:
-                testRunner: VSTest
-                testResultsFiles: '$(build.artifactstagingdirectory)/**/*.trx'
-                testRunTitle: ${{ BuildPlatform.name }} sample build tests
+  #           - task: DownloadBuildArtifacts@0
+  #             displayName: 'Download Packages'
+  #             inputs:
+  #               artifactName: nuget
+  #               itemPattern: '**/*.nupkg'
+  #               downloadPath: $(System.DefaultWorkingDirectory)/artifacts
+  #           - pwsh: Move-Item -Path artifacts\nuget\*.nupkg -Destination artifacts -Force
+  #             displayName: Move the downloaded artifacts
+  #           - pwsh: ./build.ps1 --target=dotnet-local-workloads --verbosity=diagnostic
+  #             displayName: 'Install .NET (Local Workloads)'
+  #             retryCountOnTaskFailure: 3
+  #             env:
+  #               DOTNET_TOKEN: $(dotnetbuilds-internal-container-read-token)
+  #               PRIVATE_BUILD: $(PrivateBuild)
+  #           - pwsh: ./build.ps1 --target=dotnet-integration-build --verbosity=diagnostic
+  #             displayName: Build Microsoft.Maui.IntegrationTests
+  #           - pwsh: ./build.ps1 --target=dotnet-integration-test --filter="FullyQualifiedName=Microsoft.Maui.IntegrationTests.SampleTests" --resultsfilename="integration-samples" --verbosity=diagnostic
+  #             displayName: Run ${{ BuildPlatform.name }} sample build tests
+  #           - task: PublishTestResults@2
+  #             displayName: Publish the ${{ BuildPlatform.name }} sample build tests
+  #             condition: always()
+  #             inputs:
+  #               testRunner: VSTest
+  #               testResultsFiles: '$(build.artifactstagingdirectory)/**/*.trx'
+  #               testRunTitle: ${{ BuildPlatform.name }} sample build tests
 
-  - stage: templates_net
-    displayName: Test Templates
-    dependsOn: pack_net
-    jobs:
-    - template: common/maui-templates.yml
-      parameters:
-        RunPlatforms: ${{ parameters.RunTemplatePlatforms }}
-        BuildPlatforms: ${{ parameters.BuilTemplatePlatforms }}
+  # - stage: templates_net
+  #   displayName: Test Templates
+  #   dependsOn: pack_net
+  #   jobs:
+  #   - template: common/maui-templates.yml
+  #     parameters:
+  #       RunPlatforms: ${{ parameters.RunTemplatePlatforms }}
+  #       BuildPlatforms: ${{ parameters.BuilTemplatePlatforms }}
 
   # - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
   #   - template: common/localization-handoff.yml                     # Process outgoing strings [Localization Handoff]
