--- a/NuGet.config
+++ b/NuGet.config
@@ -25,8 +25,8 @@
     <add key="darc-pub-dotnet-emsdk-2674f58" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-2674f580/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-runtime-ed13b35" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-runtime-ed13b351/nuget/v3/index.json" />
     <!-- Added manually for .NET 8 Android -->
-    <add key="darc-pub-dotnet-android-b0fd011" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-b0fd0113/nuget/v3/index.json" />
-    <!-- Added manually for .NET 8 iOS -->
+    <add key="darc-pub-dotnet-android-68175bb" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-68175bbe/nuget/v3/index.json" />
+    <!-- Added manually for .NET 8 macios -->
     <add key="darc-pub-xamarin-xamarin-macios-bc01f5e" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-bc01f5e0/nuget/v3/index.json" />
   </packageSources>
   <activePackageSource>
