--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -190,7 +190,7 @@ extends:
             steps:
               - template: /eng/pipelines/common/buildandtest.yml@self
                 parameters:
-                  dotnetScript: $(Build.SourcesDirectory)/build.cmd
+                  dotnetScript: $(Build.SourcesDirectory)/dotnet.cmd
                   buildScript: $(_buildScript)
                   buildConfig: $(_BuildConfig)
                   repoArtifactsPath: $(Build.Arcade.ArtifactsPath)
